--- a/app/src/main/res/layout/program_item.xml
+++ b/app/src/main/res/layout/program_item.xml
@@ -8,11 +8,10 @@
     <ImageView
         android:id="@+id/program_image"
         android:layout_width="match_parent"
-        android:layout_height="500px"
+        android:layout_height="250dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:scaleType="centerCrop"
         appConfig:layout_constraintEnd_toEndOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
         appConfig:layout_constraintTop_toTopOf="parent"
