--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -12,7 +12,7 @@
         <item
             android:id="@+id/nav_stats"
             android:icon="@drawable/ic_timeline_black_24dp"
-            android:title="Statistics" />
+            android:title="Progress" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_build_black_24dp"
