--- a/app/src/main/res/layout/activity_reps_action.xml
+++ b/app/src/main/res/layout/activity_reps_action.xml
@@ -22,7 +22,7 @@
         android:layout_height="81dp"
         android:layout_marginTop="8dp"
         android:background="#eff2f7"
-        app:layout_constraintBottom_toTopOf="@+id/reps_action_clock_image"
+        app:layout_constraintBottom_toTopOf="@+id/reps_action_coming_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,17 +95,90 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/reps_action_clock_image"
+    <TextView
+        android:id="@+id/reps_action_coming_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/roboto"
+        android:text="@string/coming_next"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="fill_parent"
+        android:layout_height="2dip"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="#ddd"
+        app:layout_constraintBottom_toTopOf="@+id/reps_action_constraintLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/reps_action_constraintLayout2"
         android:layout_width="0dp"
-        android:layout_height="290dp"
+        android:layout_height="278dp"
         android:layout_marginBottom="8dp"
-        android:scaleType="fitCenter"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="#eff2f7"
         app:layout_constraintBottom_toTopOf="@+id/reps_action_progressBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/clock" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/reps_action_next_image"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@+id/reps_action_next_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/reps_action_next_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/roboto"
+            android:textSize="22sp"
+            app:layout_constraintBottom_toTopOf="@+id/reps_action_next_icon"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/reps_action_next_icon"
+            android:layout_width="22dp"
+            android:layout_height="21dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_watch" />
+
+        <TextView
+            android:id="@+id/reps_action_next_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/roboto"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/reps_action_next_icon"
+            app:layout_constraintStart_toEndOf="@+id/reps_action_next_icon"
+            app:layout_constraintTop_toTopOf="@+id/reps_action_next_icon" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <ProgressBar
         android:id="@+id/reps_action_progressBar"
