--- a/app/src/main/res/layout/activity_recovery_action.xml
+++ b/app/src/main/res/layout/activity_recovery_action.xml
@@ -6,33 +6,66 @@
     android:layout_height="match_parent"
     tools:context="pl.edu.agh.pockettrainer.ui.activities.RecoveryActionActivity">
 
-    <TextView
-        android:id="@+id/recovery_action_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="@string/recovery"
-        android:textColor="@android:color/black"
-        android:textSize="44sp"
-        app:layout_constraintBottom_toTopOf="@+id/recovery_action_icon"
-        app:layout_constraintEnd_toEndOf="@+id/recovery_action_icon"
-        app:layout_constraintStart_toStartOf="@+id/recovery_action_icon" />
-
-    <ImageView
-        android:id="@+id/recovery_action_icon"
-        android:layout_width="120dp"
-        android:layout_height="104dp"
-        android:layout_marginBottom="12dp"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/recovery_action_coming_label"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/recovery_action_coming_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_battery" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/recovery_action_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/recovery"
+            android:textColor="@android:color/black"
+            android:textSize="44sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/recovery_action_icon"
+                android:layout_width="120dp"
+                android:layout_height="104dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:adjustViewBounds="false"
+                android:cropToPadding="false"
+                app:srcCompat="@drawable/ic_battery" />
+
+            <Button
+                android:id="@+id/recovery_action_next_button_done"
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
+                android:background="#00A6FF"
+                android:elevation="0dp"
+                android:onClick="onDoneButtonClick"
+                android:text="@string/ready"
+                android:textColor="#fff" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/recovery_action_coming_label"
@@ -117,20 +150,6 @@
             app:layout_constraintStart_toEndOf="@+id/recovery_action_next_icon"
             app:layout_constraintTop_toTopOf="@+id/recovery_action_next_icon" />
 
-        <Button
-            android:id="@+id/recovery_action_next_button_done"
-            android:layout_width="wrap_content"
-            android:layout_height="38dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"
-            android:background="#00A6FF"
-            android:onClick="onDoneButtonClick"
-            android:text="@string/ready"
-            android:textColor="#fff"
-            app:layout_constraintBottom_toBottomOf="@+id/recovery_action_next_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/recovery_action_next_title" />
 
     </android.support.constraint.ConstraintLayout>
 
