--- a/app/src/main/res/layout/activity_timed_recovery.xml
+++ b/app/src/main/res/layout/activity_timed_recovery.xml
@@ -6,49 +6,83 @@
     android:layout_height="match_parent"
     tools:context="pl.edu.agh.pockettrainer.ui.activities.TimedRecoveryActivity">
 
-    <TextView
-        android:id="@+id/timed_recovery_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="4dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="@string/recovery"
-        android:textColor="@android:color/black"
-        android:textSize="44sp"
-        app:layout_constraintBottom_toTopOf="@+id/timed_recovery_icon"
-        app:layout_constraintEnd_toEndOf="@+id/timed_recovery_seconds"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/timed_recovery_icon" />
-
-    <ImageView
-        android:id="@+id/timed_recovery_icon"
-        android:layout_width="120dp"
-        android:layout_height="104dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/timed_recovery_coming_label"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/timed_recovery_coming_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.37"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_battery" />
+        android:gravity="center">
 
-    <TextView
-        android:id="@+id/timed_recovery_seconds"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="60"
-        android:textColor="@android:color/black"
-        android:textSize="60sp"
-        app:layout_constraintBottom_toBottomOf="@+id/timed_recovery_icon"
-        app:layout_constraintStart_toEndOf="@+id/timed_recovery_icon"
-        app:layout_constraintTop_toTopOf="@+id/timed_recovery_icon" />
+        <TextView
+            android:id="@+id/timed_recovery_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/recovery"
+            android:textColor="@android:color/black"
+            android:textSize="44sp"
+            tools:layout_editor_absoluteX="189dp"
+            tools:layout_editor_absoluteY="123dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/timed_recovery_icon"
+                android:layout_width="120dp"
+                android:layout_height="104dp"
+                app:srcCompat="@drawable/ic_battery"
+                tools:layout_editor_absoluteX="170dp"
+                tools:layout_editor_absoluteY="205dp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/timed_recovery_seconds"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="60"
+                    android:textColor="@android:color/black"
+                    android:textSize="60sp"
+                    tools:layout_editor_absoluteX="323dp"
+                    tools:layout_editor_absoluteY="195dp" />
+
+                <Button
+                    android:id="@+id/timed_recovery_next_button_skip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="38dp"
+                    android:background="#f95f62"
+                    android:onClick="onSkipButtonClick"
+                    android:text="@string/skip"
+                    android:textColor="#fff"
+                    tools:layout_editor_absoluteX="314dp"
+                    tools:layout_editor_absoluteY="277dp" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/timed_recovery_coming_label"
@@ -132,21 +166,6 @@
             app:layout_constraintBottom_toBottomOf="@+id/timed_recovery_next_icon"
             app:layout_constraintStart_toEndOf="@+id/timed_recovery_next_icon"
             app:layout_constraintTop_toTopOf="@+id/timed_recovery_next_icon" />
-
-        <Button
-            android:id="@+id/timed_recovery_next_button_skip"
-            android:layout_width="wrap_content"
-            android:layout_height="38dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"
-            android:background="#f95f62"
-            android:onClick="onSkipButtonClick"
-            android:text="@string/skip"
-            android:textColor="#fff"
-            app:layout_constraintBottom_toBottomOf="@+id/timed_recovery_next_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/timed_recovery_next_title" />
 
     </android.support.constraint.ConstraintLayout>
 
