--- a/app/src/main/res/layout/content_today_recovery.xml
+++ b/app/src/main/res/layout/content_today_recovery.xml
@@ -1,21 +1,59 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appConfig="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ProgressBar
+        android:id="@+id/today_recovery_progressBar_background"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:max="100"
+        android:progress="100"
+        android:progressDrawable="@drawable/circle_full"
+        appConfig:layout_constraintBottom_toBottomOf="parent"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toTopOf="parent"
+        appConfig:layout_constraintHorizontal_bias="0.0"
+        appConfig:layout_constraintVertical_bias="0.0" />
+
+    <ProgressBar
+        android:id="@+id/today_recovery_progressBar"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:max="100"
+        android:progress="0"
+        android:progressDrawable="@drawable/circle_blue"
+        appConfig:layout_constraintBottom_toBottomOf="parent"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintHorizontal_bias="0.0"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toTopOf="parent"
+        appConfig:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/today_recovery_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="128dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/recovery_day"
         android:textColor="@android:color/black"
         android:textSize="36sp"
-        appConfig:layout_constraintBottom_toBottomOf="parent"
-        appConfig:layout_constraintLeft_toLeftOf="parent"
-        appConfig:layout_constraintRight_toRightOf="parent"
-        appConfig:layout_constraintTop_toTopOf="parent"
-        appConfig:layout_constraintVertical_bias="0.311" />
+        appConfig:layout_constraintBottom_toBottomOf="@+id/today_recovery_progressBar_background"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toTopOf="@+id/today_recovery_progressBar" />
 
     <ImageView
         android:id="@+id/today_recovery_imageView"
@@ -32,16 +70,28 @@
         android:id="@+id/today_recovery_textViewCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="72dp"
         android:fontFamily="@font/roboto"
         android:text="0d 0h 00m 00s"
+        android:textColor="#000"
         android:textSize="18sp"
-        appConfig:layout_constraintBottom_toBottomOf="parent"
-        appConfig:layout_constraintHorizontal_bias="0.501"
         appConfig:layout_constraintLeft_toLeftOf="parent"
         appConfig:layout_constraintRight_toRightOf="parent"
-        appConfig:layout_constraintTop_toBottomOf="@+id/today_recovery_imageView"
-        appConfig:layout_constraintVertical_bias="0.026" />
+        appConfig:layout_constraintTop_toBottomOf="@+id/today_recovery_textView" />
+
+    <TextView
+        android:id="@+id/today_recovery_complete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/roboto"
+        android:text="TextView"
+        android:textSize="18sp"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toBottomOf="@+id/today_recovery_textViewCounter"
+        tools:text="50% complete" />
 
 </android.support.constraint.ConstraintLayout>
