--- a/app/src/main/res/layout/content_progress.xml
+++ b/app/src/main/res/layout/content_progress.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.edu.agh.pockettrainer.ui.activities.ProgressActivity"
+    tools:context="pl.edu.agh.pockettrainer.ui.activities.HistoryActivity"
     android:background="#ccc">
 
     <ListView
-        android:id="@+id/progress_listView"
+        android:id="@+id/history_listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
