--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -7,7 +7,7 @@
     android:background="@android:drawable/dialog_holo_light_frame">
 
     <TextView
-        android:id="@+id/progress_item_title"
+        android:id="@+id/history_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -18,7 +18,7 @@
         appConfig:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/progress_item_content"
+        android:id="@+id/history_item_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -31,6 +31,6 @@
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintEnd_toEndOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
-        appConfig:layout_constraintTop_toBottomOf="@+id/progress_item_title" />
+        appConfig:layout_constraintTop_toBottomOf="@+id/history_item_title" />
 
 </android.support.constraint.ConstraintLayout>
