--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -10,9 +10,9 @@
             android:icon="@drawable/ic_library_books_black_24dp"
             android:title="Programs" />
         <item
-            android:id="@+id/nav_stats"
+            android:id="@+id/nav_history"
             android:icon="@drawable/ic_timeline_black_24dp"
-            android:title="Progress" />
+            android:title="History" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_build_black_24dp"
