--- a/app/src/main/res/layout/content_today_recovery.xml
+++ b/app/src/main/res/layout/content_today_recovery.xml
@@ -4,6 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/today_recovery_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/roboto_bold"
+        android:textSize="30sp"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toTopOf="parent" />
+
     <ProgressBar
         android:id="@+id/today_recovery_progressBar_background"
         style="?android:progressBarStyleHorizontal"
