--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -13,9 +13,48 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto_bold"
-        android:textSize="21sp"
+        android:text="Day 1"
+        android:textColor="#000"
+        android:textSize="22sp"
         appConfig:layout_constraintStart_toStartOf="parent"
         appConfig:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/history_item_started_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="Started at:"
+        android:textSize="18sp"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toBottomOf="@+id/history_item_title" />
+
+
+    <TextView
+        android:id="@+id/history_item_total_time_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="Total time:"
+        android:textSize="18sp"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toBottomOf="@+id/history_item_started_label" />
+
+    <TextView
+        android:id="@+id/history_item_exercised_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="Exercised:"
+        android:textSize="18sp"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toBottomOf="@+id/history_item_total_time_label" />
 
     <TextView
         android:id="@+id/history_item_content"
@@ -23,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
         android:lineSpacingExtra="8sp"
@@ -31,6 +70,25 @@
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintEnd_toEndOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
-        appConfig:layout_constraintTop_toBottomOf="@+id/history_item_title" />
+        appConfig:layout_constraintTop_toBottomOf="@+id/history_item_exercised_label" />
+
+    <TextView
+        android:id="@+id/history_item_started"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/roboto"
+        android:textSize="18sp"
+        appConfig:layout_constraintBaseline_toBaselineOf="@+id/history_item_started_label"
+        appConfig:layout_constraintStart_toEndOf="@+id/history_item_started_label" />
+
+    <TextView
+        android:id="@+id/history_item_total_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
+        android:textSize="18sp"
+        appConfig:layout_constraintBaseline_toBaselineOf="@+id/history_item_total_time_label"
+        appConfig:layout_constraintStart_toStartOf="@+id/history_item_started" />
 
 </android.support.constraint.ConstraintLayout>
