--- a/app/src/main/res/menu/program_browser_main.xml
+++ b/app/src/main/res/menu/program_browser_main.xml
@@ -2,5 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="Browse..." android:id="@+id/program_browser_menu_browser"/>
     <item android:title="Download..." android:id="@+id/program_browser_menu_download"/>
+    <item android:title="Restore bundled" android:id="@+id/program_browser_menu_restore"/>
     <item android:title="Delete all" android:id="@+id/program_browser_menu_delete_all"/>
 </menu>
